--- a/index.html
+++ b/index.html
@@ -11,126 +11,22 @@
 
 <body>
     <header>
-        <nav>
-            <a href="/">
-                <img src="./images/logo.svg" alt="BeautyZone" lang="en">
-            </a>
-            <ul>
-                <li><a class="link" href="#">Про нас</a></li>
-                <li><a class="link" href="#">Чому ми</a></li>
-                <li><a class="link" href="#">Наші процедури</a></li>
-                <li><a class="link" href="#">Контакти</a></li>
-            </ul>
-        </nav>
-        <aside>
-            <ul>
-                <li>
-                    <a href="tel:+380960000007s"></a>
-                </li>
-                <li>
-                    <a href="#">
-                        <!-- Facebook icon -->
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <!-- Instagram icon -->
-                    </a>
-                </li>
-            </ul>
-        </aside>
-    </header>
-    <main>
-        <section> <!--1-->
-            <p>Косметологічна клініка</p>
-            <H1 lang="en" class="Hero-tytle">Beauty Zone</H1>
-            <button class="MainButton" type="button">Замовити дзвінок</button>
-            <p class="adition-info">Запишись та отримай безкоштовну консультацію нашого косметолога</p>
-        </section>
-        <section> <!--Перевтілюйтесь в beauty zone!-->
-            <h2 class="section-title">Перевтілюйтесь в <span lang="en" class="accent-en">beauty
-                    zone!</span></h2>
-            <p class="info">
-                Наша косметологічна клініка пропонує вам професійні послуги
-                з догляду за шкірою обличчя та тіла.
-            </p>
-            <p class="info">
-                B <span class="accent-en">beauty zone</span> ми гарантуємо найвищі стандарти якості
-                та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою красу та
-                молодість.
-                З нами краса назавжди!
-            </p>
-            <img src="./images/before.jpg" alt="Before">
-            <img src="./images/after.jpg" alt="After">
-        </section>
-        <section class="section"><!--Чому люди обирають нас-->
-            <h2 class="section-title">Чому люди <span class="accent">обирають нас</span></h2>
-            <article>
-                <h3><img src="./images/nuclear.jpg" alt="Nuclear"></h3>
-                <p>Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5 років</p>
-            </article>
-            <article>
-                <h3><img src="./images/soap.jpg" alt="Soap"></h3>
-                <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
-            </article>
-            <article>
-                <h3><img src="./images/crown.jpg" alt="Crown"></h3>
-                <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
-            </article>
-        </section>
-        <section class="section"><!--Наші процедури-->
-            <h2 class="section-title">Наші <span class="accent">процедури</span></h2>
-            <article>
-                <h3><img src="./images/masks.jpg" alt="Masks"></h3>
-                <p class="procedures">Маски для обличчя</p>
-            </article>
-            <article>
-                <h3><img src="./images/injections.jpg" alt="Injections"></h3>
-                <p></p>
-            </article>
-            <article>
-                <h3><img src="./images/procedures.jpg" alt="Procedures"></h3>
-                <p></p>
-            </article>
-        </section>
-        <section class="section"><!--Як нас знайти-->
-            <h2 class="section-title">Як нас <span class="accent">знайти</span></h2>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9323900545987!2d30.515600377025123!3d50.44235998794561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sde!4v1702989672051!5m2!1sru!2sde"
-                width="605" height="481" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-            <aside>
-                <h3 class="signed">Запишіться <span>безкоштовно</span> та отримайте подарунок</h3>
-                <button class="SecondButton" type="button">Записатись безкоштовно</button>
-                <p class="confidential">Натискаючи на кнопку я погоджуюсь<a class="confidential" href="#"> з політикою
-                        конфіденційності</a>
-                </p>
-            </aside>
-        </section>
-    </main>
-    <footer>
-        <nav>
-            <a href="/">
-                <img src="./images/logo.svg" alt="BeautyZone" lang="en">
-            </a>
-            <ul>
-                <li><a class="footer-link" href="#">Про нас</a></li>
-                <li><a class="footer-link" href="#">Чому ми</a></li>
-                <li><a class="footer-link" href="#">Наші процедури</a></li>
-                <li><a class="footer-link" href="#">Контакти</a></li>
-            </ul>
-            <address>
+        <div class="container">
+            <nav>
+                <a href="/">
+                    <img src="./images/logo.svg" alt="BeautyZone" lang="en">
+                </a>
                 <ul>
-                    <li><a class="addres-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-                    <li><a class="addres-link" href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
-                    <li>
-                        <a class="addres-link" href="https://maps.app.goo.gl/KGZe3xbd6ZkTj54U8">Україна, м. Київ,
-                            вул. Тараса Шевченка 5</a>
-                    </li>
+                    <li><a class="link" href="#about-us">Про нас</a></li>
+                    <li><a class="link" href="#why-we">Чому ми</a></li>
+                    <li><a class="link" href="#our-procedures">Наші процедури</a></li>
+                    <li><a class="link" href="#contacts">Контакти</a></li>
                 </ul>
+            </nav>
+            <aside>
                 <ul>
                     <li>
-                        <a href="tel:+380960000007"></a>
+                        <a href="tel:+380960000007s"></a>
                     </li>
                     <li>
                         <a href="#">
@@ -143,10 +39,133 @@
                         </a>
                     </li>
                 </ul>
-            </address>
-            <p class="addres-link">Політика конфіденційності</p>
-            <p><a class="copyryght" class="#" href="#">&copy; 2022 Дані захищені</a></p>
-        </nav>
+            </aside>
+        </div>
+    </header>
+    <main>
+        <section> <!--1-->
+            <div class="container">
+                <p>Косметологічна клініка</p>
+                <H1 lang="en" class="Hero-tytle">Beauty Zone</H1>
+                <button class="MainButton" type="button">Замовити дзвінок</button>
+                <p class="adition-info">Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+            </div>
+        </section>
+        <section class="about-us section"> <!--Перевтілюйтесь в beauty zone! (2)-->
+            <div class="container">
+                <h2 class="title-section-two" id="about-us">Перевтілюйтесь в <span lang="en">beauty
+                        zone!</span></h2>
+                <p class="info">
+                    Наша косметологічна клініка пропонує вам професійні послуги
+                    з догляду за шкірою обличчя та тіла.
+                </p>
+                <p class="info">
+                    B <span>beauty zone</span> ми гарантуємо найвищі стандарти якості
+                    та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою
+                    красу та
+                    молодість.
+                    З нами краса назавжди!
+                </p>
+                <img src="./images/before.jpg" alt="Before">
+                <img src="./images/after.jpg" alt="After">
+            </div>
+        </section>
+        <section class="section"><!--Чому люди обирають нас (3)-->
+            <div class="container">
+                <h2 class="title-section-three-to-five" id="why-we">Чому люди <span class="accent">обирають нас</span>
+                </h2>
+                <article>
+                    <h3 class="visually-hidden"><img src="./images/nuclear.jpg" alt="Nuclear"></h3>
+                    <p class="whay">Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5 років</p>
+                </article>
+                <article>
+                    <h3 class="visually-hidden"><img src="./images/soap.jpg" alt="Soap"></h3>
+                    <p class="whay">Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
+                </article>
+                <article>
+                    <h3 class="visually-hidden"><img src="./images/crown.jpg" alt="Crown"></h3>
+                    <p class="whay">Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
+                </article>
+            </div>
+        </section>
+        <section class="section"><!--Наші процедури (4)-->
+            <div class="container">
+                <h2 class="title-section-three-to-five" id="our-procedures">Наші <span class="accent">процедури</span>
+                </h2>
+                <article>
+                    <h3 class="visually-hidden"><img src="./images/masks.jpg" alt="Masks"></h3>
+                    <p class="procedures">Маски для обличчя</p>
+                </article>
+                <article>
+                    <h3 class="visually-hidden"><img src="./images/injections.jpg" alt="Injections"></h3>
+                    <p></p>
+                </article>
+                <article>
+                    <h3 class="visually-hidden"><img src="./images/procedures.jpg" alt="Procedures"></h3>
+                    <p></p>
+                </article>
+            </div>
+        </section>
+        <section class="section"><!--Як нас знайти (5)-->
+            <div class="container">
+                <h2 class="title-section-three-to-five" id="contacts">Як нас <span class="accent">знайти</span></h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9323900545987!2d30.515600377025123!3d50.44235998794561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sde!4v1702989672051!5m2!1sru!2sde"
+                    width="605" height="481" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                <aside>
+                    <h3 class="signed">Запишіться <span>безкоштовно</span> та отримайте подарунок</h3>
+                    <button class="SecondButton" type="button">Записатись безкоштовно</button>
+                    <p class="confidential">Натискаючи на кнопку я погоджуюсь<a class="confidential" href="#"> з
+                            політикою
+                            конфіденційності</a>
+                    </p>
+                </aside>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <nav>
+                <a href="/">
+                    <img src="./images/logo.svg" alt="BeautyZone" lang="en">
+                </a>
+                <ul>
+                    <li><a class="footer-link" href="#">Про нас</a></li>
+                    <li><a class="footer-link" href="#">Чому ми</a></li>
+                    <li><a class="footer-link" href="#">Наші процедури</a></li>
+                    <li><a class="footer-link" href="#">Контакти</a></li>
+                </ul>
+                <address>
+                    <ul>
+                        <li><a class="addres-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+                        <li><a class="addres-link" href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
+                        <li>
+                            <a class="addres-link" href="https://maps.app.goo.gl/KGZe3xbd6ZkTj54U8">Україна, м. Київ,
+                                вул. Тараса Шевченка 5</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <a href="tel:+380960000007"></a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Facebook icon -->
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Instagram icon -->
+                            </a>
+                        </li>
+                    </ul>
+                </address>
+                <p class="addres-link">Політика конфіденційності</p>
+                <p><a class="copyryght" class="#" href="#">&copy; 2022 Дані захищені</a></p>
+            </nav>
+        </div>
     </footer>
 </body>
 
